settings: Add global widget selection
Instead of each watch face implementing their own settings for which
widgets to display, we can have a global selection of widgets. All
watch faces can then determine whether it is enabled and so display it
in whichever way makes sense for that face.

Current widgets supported are heart rate, step counter, and weather.

--- a/src/displayapp/apps/Apps.h.in
+++ b/src/displayapp/apps/Apps.h.in
@@ -37,6 +37,7 @@ namespace Pinetime {
       SettingWeatherFormat,
       SettingDisplay,
       SettingWakeUp,
+      SettingWidgets,
       SettingSteps,
       SettingSetDateTime,
       SettingChimes,
