--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -410,6 +410,7 @@ list(APPEND SOURCE_FILES
         displayapp/screens/settings/SettingTimeFormat.cpp
         displayapp/screens/settings/SettingWeatherFormat.cpp
         displayapp/screens/settings/SettingWakeUp.cpp
+        displayapp/screens/settings/SettingWidgets.cpp
         displayapp/screens/settings/SettingDisplay.cpp
         displayapp/screens/settings/SettingSteps.cpp
         displayapp/screens/settings/SettingSetDateTime.cpp
