hiit: Add new High Intensity Interval Training app
Adds a configurable HIIT timer with active/rest intervals and sets.

Has the following features:
- Vibration feedback (3s before next active/rest period)
- Pause with hardware button
- Summary screen when workout ends

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -393,6 +393,7 @@ list(APPEND SOURCE_FILES
         displayapp/screens/Steps.cpp
         displayapp/screens/Timer.cpp
         displayapp/screens/Dice.cpp
+        displayapp/screens/Hiit.cpp
         displayapp/screens/PassKey.cpp
         displayapp/screens/Error.cpp
         displayapp/screens/Alarm.cpp
