--- a/src/displayapp/apps/Apps.h.in
+++ b/src/displayapp/apps/Apps.h.in
@@ -29,6 +29,7 @@ namespace Pinetime {
       Calculator,
       Steps,
       Dice,
+      Hiit,
       Weather,
       PassKey,
       QuickSettings,
